--- a/inventarios/inventarios/staticfiles/templates2/html/app/add-insumo.html
+++ b/inventarios/inventarios/staticfiles/templates2/html/app/add-insumo.html
@@ -158,7 +158,7 @@
         if (insumoId) {
             // Edición
             method = 'PUT';
-            url = `/api/provider/edit/${insumoId}/`;
+            url = `/insumos/retrieve/edit/${insumoId}/`;
         } else {
             // Creación
             method = 'POST';
