--- a/inventarios/inventarios/staticfiles/templates2/html/app/list-certificacion.html
+++ b/inventarios/inventarios/staticfiles/templates2/html/app/list-certificacion.html
@@ -38,7 +38,7 @@
 
         fetch('/insumos/certificaciones/list-create/', {
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
         .then(response => response.json())
@@ -48,7 +48,7 @@
             data.forEach(certificacion => {
                 fetch(`/insumos/editar/ingrediente/${certificacion.ingrediente_activo}/`, {
                     headers: {
-                        'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                        'Authorization': `Bearer ${accessToken}`
                     }
                 })
                 .then(response => response.json())
@@ -108,7 +108,7 @@
                 fetch(`/insumos/certificaciones/retrieve/${certId}/`, {
                     method: 'DELETE',
                     headers: {
-                        'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                        'Authorization': `Bearer ${accessToken}`
                     }
                 })
                 .then(response => response.json())
