--- a/inventarios/inventarios/staticfiles/templates2/html/app/add-bodegas.html
+++ b/inventarios/inventarios/staticfiles/templates2/html/app/add-bodegas.html
@@ -192,7 +192,7 @@
         method: httpMethod,
         headers: {
             'Content-Type': 'application/json',
-            'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+            'Authorization': `Bearer ${accessToken}`
         },
         body: JSON.stringify(payload)
     })
