--- a/inventarios/inventarios/staticfiles/templates2/html/app/add-certificacion.html
+++ b/inventarios/inventarios/staticfiles/templates2/html/app/add-certificacion.html
@@ -62,7 +62,7 @@
         // Función para llenar el dropdown de ingredientes activos
         function fillIngredientesDropdown(selectedId) {
             fetch('/insumos/ingredientes-activos/list-create/', {
-                headers: { 'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}` }
+                headers: { 'Authorization': `Bearer ${accessToken}` }
             })
                 .then(response => response.json())
                 .then(data => {
@@ -88,7 +88,7 @@
         if (cert_id) {
             fetch(`/insumos/editar/certificacion/${cert_id}/`, {
                 headers: {
-                    'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                    'Authorization': `Bearer ${accessToken}`
                 }
             })
                 .then(response => response.json())
@@ -142,7 +142,7 @@
                 method: httpMethod,
                 headers: {
                     'Content-Type': 'application/json',
-                    'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                    'Authorization': `Bearer ${accessToken}`
                 },
                 body: JSON.stringify(dataToSend)
             })
