--- a/inventarios/inventarios/staticfiles/templates2/html/app/add-fincas.html
+++ b/inventarios/inventarios/staticfiles/templates2/html/app/add-fincas.html
@@ -88,7 +88,7 @@
             method: httpMethod,
             headers: {
                 'Content-Type': 'application/json',
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             },
             body: JSON.stringify(payload)
         })
