--- a/inventarios/inventarios/staticfiles/templates2/html/app/add-salidas.html
+++ b/inventarios/inventarios/staticfiles/templates2/html/app/add-salidas.html
@@ -105,7 +105,7 @@
         method: 'POST',
         body: formData,
         headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
     })
     .then(response => response.json())
