--- a/inventarios/inventarios/staticfiles/templates2/html/app/list-fincas.html
+++ b/inventarios/inventarios/staticfiles/templates2/html/app/list-fincas.html
@@ -80,7 +80,7 @@
         fetch(`/user/finca/retrieve/${bodegas_id}`, {
             method: 'DELETE',
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
             .then(response => response.json())
