--- a/inventarios/inventarios/staticfiles/templates2/html/app/list-ingrediente.html
+++ b/inventarios/inventarios/staticfiles/templates2/html/app/list-ingrediente.html
@@ -31,7 +31,7 @@
     document.addEventListener("DOMContentLoaded", function () {
         fetch('/insumos/ingredientes-activos/list-create/', {
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
             .then(response => response.json())
@@ -101,7 +101,7 @@
             fetch(`/insumos/ingredientes-activos/retrieve/${ingredientId}/`, {
                 method: 'DELETE',
                 headers: {
-                    'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                    'Authorization': `Bearer ${accessToken}`
                 }
             })
                 .then(response => response.json())
