--- a/inventarios/inventarios/staticfiles/templates2/html/app/list-insumos.html
+++ b/inventarios/inventarios/staticfiles/templates2/html/app/list-insumos.html
@@ -97,7 +97,10 @@
 
 
 <script>
-    const accessToken = sessionStorage.getItem('accessToken');
+    {% if user.is_authenticated %}
+    //const accessToken = accessToken;
+    const accessToken ="{{token}}"
+    {% endif %}
     
     document.addEventListener("DOMContentLoaded", function() {
         // URL de tu API
@@ -213,7 +216,7 @@
         fetch(`/insumos/retrieve/${userId}`, {
             method: 'DELETE',
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
             .then(data => {
