--- a/inventarios/inventarios/staticfiles/templates2/html/app/list-lotes.html
+++ b/inventarios/inventarios/staticfiles/templates2/html/app/list-lotes.html
@@ -82,7 +82,7 @@
         fetch(`/user/lotes/retrieve/${bodegas_id}`, {
             method: 'DELETE',
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
             .then(response => response.json())
