--- a/inventarios/inventarios/staticfiles/templates2/html/app/add-entradas.html
+++ b/inventarios/inventarios/staticfiles/templates2/html/app/add-entradas.html
@@ -21,7 +21,7 @@
                         <div class="form-group">
                             <label for="fecha_vencimiento">Fecha de Vencimiento *</label>
                             {% if entradas_id %}
-                            <input type="date" class="form-control" placeholder="Ingrese la fecha de vencimiento" required id="fecha_vencimiento" name="fecha_vencimiento" value="{{ entradas.fecha_vencimiento|date:'j \d\e F \d\e Y' }}">
+                            <input type="date" class="form-control" placeholder="Ingrese la fecha de vencimiento" required id="fecha_vencimiento" name="fecha_vencimiento" value="{{ entradas.fecha_vencimiento|date:'Y-m-d' }}">
                             {% else %}
                             <input type="date" class="form-control" placeholder="Ingrese la fecha de vencimiento" required id="fecha_vencimiento" name="fecha_vencimiento">
                             {% endif %}
